@@ -1,8 +1,9 @@
 import os
 from test import test_support
 
-# Skip test if _tkinter wasn't built.
+# Skip test if _tkinter wasn't built or gui resource is not available.
 test_support.import_module('_tkinter')
+test_support.requires('gui')
 
 this_dir = os.path.dirname(os.path.abspath(__file__))
 lib_tk_test = os.path.abspath(os.path.join(this_dir, os.path.pardir,
@@ -10,9 +11,6 @@ lib_tk_test = os.path.abspath(os.path.join(this_dir, os.path.pardir,
 
 with test_support.DirsOnSysPath(lib_tk_test):
     import runtktests
-
-# Skip test if tk cannot be initialized.
-runtktests.check_tk_availability()
 
 def test_main(enable_gui=False):
     if enable_gui:
